# conversify

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  config.cpu.yaml  config.example.toml  config.gpu.yaml  config.toml  conversify.Dockerfile  docker-compose.cpu.yml  docker-compose.gpu.yml  kokoro.cpu.Dockerfile  kokoro.gpu.Dockerfile  llm.cpu.Dockerfile  llm.gpu.Dockerfile  ollama-entrypoint.sh  pyproject.toml
avatar-ui/: .dockerignore  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.simple  README.Docker.md  eslint.config.mjs  package-lock.json  package.json
avatar-ui/components/: file-upload.tsx  welcome.tsx
avatar-ui/components/livekit/: media-tiles.tsx
avatar-ui/public/: audio-test.html
conversify/: main.py
conversify/core/: agent.py  callbacks.py  memory.py  vision.py
conversify/models/: llm.py  stt.py  stt_openai.py  tts.py  utils.py
conversify/prompts/: llm.txt
conversify/utils/: config.py  logger.py
scripts/: format.sh  quality.sh  run_app.sh  run_kokoro.sh  run_llm.sh
tests/: test_agent.py  test_stt_whisper.py
