[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conversify"
version = "0.1.0"
description = "Conversify is a real-time, low-latency, voice- and vision-enabled AI assistant built on LiveKit."
authors = [{name = "Taresh"}]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "aiohttp>=3.9,<4",
    "faster-whisper>=1.2.0",
    "livekit-agents[turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-openai>=0.11.0",
    "livekit-plugins-silero>=1.2.6",
    "livekit-plugins-simli>=1.2.7",
    "livekit-plugins-turn-detector>=1.2.6",
    "memoripy>=0.1.2",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
]

[tool.setuptools]
packages = ["conversify"]

[tool.uv]
dev-dependencies = [
    "numpy>=1.26.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
